methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-1 to 7) {
        ^